--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Here assignment</title>
   </head>
   <body>
@@ -314,12 +315,12 @@
         <div class="col-lg-6 col-md-6 col-10 text-white text-right">
           <div class="icon d-flex justify-content-end flex-wrap">
             <p>©2020 HERE</p>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter-square"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-facebook-square"></i></a>
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
+          <ul class="list-inline">
+                <li class="list-inline-item"><a href="#"><i class="fa fa-facebook-square fa-lg"></i></a></li>
+                <li class="list-inline-item"><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
+                <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                <li class="list-inline-item"><a href="#"><i class="fa fa-whatsapp fa-lg"></i></a></li>
+              </ul>
           </div>
         </div>
       </div>
