--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="#">Company</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link bg-info rounded-pill text-white px-4" href="#">Contact Us <span class="sr-only">(current)</span></a>
+              <a class="nav-link bg-info rounded-pill text-white" href="#">Contact Us <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
@@ -69,15 +69,23 @@
     <div class="logo-section ">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 col-sm-12">
-            <ul class="list-inline">
-          <li class="list-inline-item py-3"><img src="images/logo-oracle-03.png" alt="logos"></li>
-          <li class="list-inline-item py-3" ><img src="images/logo-aws-02.png" alt="logos"></li>
-          <li class="list-inline-item py-3" ><img src="images/logo-audi-02.png" alt="logos"></li>
-          <li class="list-inline-item py-3" ><img src="images/logo-intel-02.png" alt="logos"></li>
-          <li class="list-inline-item py-3" ><img src="images/logo-pioneer-02.png" alt="logos"></li>
-          <li class="list-inline-item py-3" ><img src="images/logo-mercedes-02.png" alt="logos"></li>
-        </ul>
+          <div class="col-md-2 col-sm-12 d-flex justify-content-center align-items-center">
+           <img src="images/logo-oracle-03.png" class="img-fluid" alt="logo">
+          </div>
+          <div class="col-md-2 col-sm-12 d-flex justify-content-center align-items-center">
+           <img src="images/logo-aws-02.png" class="img-fluid" alt="logo">
+          </div>
+          <div class="col-md-2 col-sm-12 d-flex justify-content-center align-items-center">
+           <img src="images/logo-audi-02.png" class="img-fluid" alt="logo">
+          </div>
+          <div class="col-md-2 col-sm-12 d-flex justify-content-center align-items-center">
+           <img src="images/logo-intel-02.png" class="img-fluid" alt="logo">
+          </div>
+          <div class="col-md-2 col-sm-12 d-flex justify-content-center align-items-center">
+           <img src="images/logo-mercedes-02.png" class="img-fluid" alt="logo">
+          </div>
+          <div class="col-md-2 col-sm-12 d-flex justify-content-center align-items-center">
+           <img src="images/logo-pioneer-02.png" class="img-fluid" alt="logo">
           </div>
         </div>
         
